Fixes footer link spacing. Resolves SCOUT-117

--- a/scout/static/scout/css/critical.scss
+++ b/scout/static/scout/css/critical.scss
@@ -339,8 +339,9 @@ $footer-height: 40px;
 }
 
 // footer
-.scout-footer { background: #fafafa; color:#555; width: 100%; font-size: 75%; text-align:center; line-height: $footer-height; border-top: solid 1px #ddd;
-    a { color: $scout-link; display: inline-block; margin-left: 8px; }
+.scout-footer { background: #fafafa; color:#555; width: 100%; font-size: 75%; text-align:center; line-height: $footer-height; border-top: solid 1px #ddd; white-space: nowrap;
+    a { color: $scout-link; display: inline-block;  }
+    a:first-child { margin-left: 5px; }
 }
 
 .scout-error {
